--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,8 +16,10 @@ jobs:
           node-version: 16
           cache: npm
       - name: build
-        run: npm run build
-      - name: Deploy
+        run: |
+          npm install
+          npm run build
+      - name: deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
